<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_MSG" Id="{d74d42cf-c7a5-4bb3-b386-3664421b5746}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
  //-----------------------------------------------------------------------------
  // file paths for message system
  //  - compiler define option WIN switches to Windows file paths
  //-----------------------------------------------------------------------------
{IF defined (WIN)}
  {info 'WIN folders'}
  LOG_DIR               : STRING  := 'C:\TwinCAT\#MsgFiles\';
{ELSE}
  {info 'BSD folders'}
  LOG_DIR               : STRING  := '/usr/local/etc/TwinCAT/#MsgFiles/';
{END_IF}

  LOG_FILE              : STRING  := 'MSG_XtsTransport_';

  MAX_MESSAGE           : UINT    := 1000; // max entry in message list
END_VAR
VAR_GLOBAL
  Messages                        : ARRAY[1..MAX_MESSAGE] OF ST_Message;
  MessageIndex                    : UINT := 1; // message index
  MessageError                    : UINT := 0; // error counter

  fbLocalTime                     : fb_LocalTime;
  dtLocalTime                     : DT;
  sLocalTime                      : STRING;

{IF defined (TEST)}
  {info 'TEST logging enabled'}
  MessageLevel                    : E_MessageType := eMessageVerbose; // a lot of messages
{ELSE}
  MessageLevel                    : E_MessageType := eMessageInfo;    // not as much messages 
{END_IF}

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>