<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="f_MessageSet" Id="{7dd9a0ea-132a-4368-8b98-e527af9ed450}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION f_MessageSet : BOOL
VAR_INPUT
  stMessage   : ST_Message;
END_VAR
VAR
  _uiIndex   : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stMessage.tTime                     := GVL_MSG.sLocalTime;

IF (stMessage.eType = eMessageVerbose)
THEN
  IF NOT (GVL_MSG.VerboseMessages)
  THEN
    RETURN;
  END_IF
END_IF


FOR _uiIndex := 1 TO PLC_CONSTANT.MAX_MESSAGE
DO
  IF (GVL_MSG.Messages[_uiIndex].eType = e_MessageType.eMessageEmpty)
  THEN
    GVL_MSG.Messages[_uiIndex]      := stMessage;
    GVL_MSG.MessageIndex             := _uiIndex;
    EXIT;
  END_IF
END_FOR

IF (stMessage.eType = E_MessageType.eMessageError)
THEN
  // in case of error: increment counter
  GVL_MSG.MessageError := GVL_MSG.MessageError + 1;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="f_MessageSet">
      <LineId Id="104" Count="0" />
      <LineId Id="180" Count="2" />
      <LineId Id="152" Count="0" />
      <LineId Id="183" Count="4" />
      <LineId Id="179" Count="0" />
      <LineId Id="130" Count="8" />
      <LineId Id="165" Count="2" />
      <LineId Id="170" Count="0" />
      <LineId Id="168" Count="1" />
      <LineId Id="188" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>